...
            BottomNavigationBarItem(
              icon: Icon(CupertinoIcons.compass),
              label: 'Discover',
            ),
            BottomNavigationBarItem(
              icon: Icon(CupertinoIcons.sportscourt),
              label: 'Matches',
            ),
            BottomNavigationBarItem(
              icon: Icon(CupertinoIcons.person),
              label: 'Profile',
            ),
          ],
...
